--- a/app/views/personal_loan/step4.html.erb
+++ b/app/views/personal_loan/step4.html.erb
@@ -74,7 +74,7 @@
         <div class="col-md-3">
           <div class="form-group">
             <span>Office Landline No./ Mobile No. <span>*</span></span>
-            <%= f.text_field(:mobile_number, class: "form-control") %>
+            <%= f.number_field(:mobile_number, class: "form-control") %>
           </div>
         </div>
         <div class="col-md-3">
@@ -141,7 +141,7 @@
         <div class="col-md-4">
           <div class="form-group">
             <span>Mobile Number <span>*</span></span>
-            <%= f.text_field(:ref_mobile_number, class: "form-control") %>
+            <%= f.number_field(:ref_mobile_number, class: "form-control") %>
           </div>
         </div>
       </div>
