--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -30,8 +30,8 @@ input[type=number] {
 }
 
 input[type="number"], input[type="text"], input[type="date"], select, div.styled, input[type="file"] {
-  border: 2px solid #767171;
-  height: 45px;
+  border: 2px solid #767171 !important;
+  height: 45px !important;
 }
 
 textarea {
@@ -320,6 +320,12 @@ textarea.error, input.error, select.error {
   img {
     padding-bottom: 10px;
   }
+}
+
+.contact-us {
+  border: 2px solid #0854a0;
+  width: 100%;
+  height: 500px;  
 }
 
 @media only screen and (max-width: 600px) {
