--- a/app/assets/stylesheets/new_car_loan.scss
+++ b/app/assets/stylesheets/new_car_loan.scss
@@ -1,3 +1,8 @@
-// Place all the styles related to the NewCarLoan controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.new-car-salaried, .new-car-self-employed, .new-car-other-info {
+  display: none;
+}
+
+.new-car-show-div {
+  display: block;
+}
+
