--- a/app/assets/stylesheets/used_car_loan.scss
+++ b/app/assets/stylesheets/used_car_loan.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the UsedCarLoan controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.used-car-salaried, .used-car-self-employed, .used-car-other-info {
+  display: none;
+}
+
+.used-car-show-div {
+  display: block;
+}
