--- a/app/views/home_loan/step4.html.erb
+++ b/app/views/home_loan/step4.html.erb
@@ -21,15 +21,61 @@
         <div class="col-md-4">
           <h3>Professional Loan Offer</h3>
         </div>
-      </div>      
+      </div>
       <div class="row"> 
         <div class="col-md-4">
           <div class="form-group">
-            <span>Name <span>*</span></span>
-            <%= f.text_field(:name, class: "form-control") %>
+            <span>Land Type <span>*</span></span>
+            <%= f.select(:land_type, land_type, class: "form-control") %>
           </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Property Type <span>*</span></span>
+            <%= f.select(:property_type, property_type, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Property Cost <span>*</span></span>
+            <%= f.number_field(:property_cost, class: "form-control") %>
+          </div>
         </div>
       </div>
+      <div class="row"> 
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Property State <span>*</span></span>
+            <%= f.select(:property_state, states, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Property City <span>*</span></span>
+            <%= f.select(:property_city, cities(f, :property_state, :property_city), class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-group">
+            <span>Current Employment <span>*</span></span>
+            <%= f.select(:current_employment, current_employment, class: "form-control") %>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Annual Income: <span>*</span></span>
+            <%= f.number_field(:annual_income, class: "form-control") %>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Current EMI: <span>*</span></span>
+            <%= f.number_field(:current_emi, class: "form-control") %>
+          </div>
+        </div>
+      </div>     
+      <button type="submit" class="btn btn-default">Submit</button>
     </div>
   <%end%>
