--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
                     <a href="#">Pre Approved Offers</a>
                   </li>
                   <li>
-                    <a href="contact.html">Contact Us</a>
+                    <%= link_to "Contact Us", contact_us_path, method: :get %>
                   </li>
                 </ul>
               </div>
