--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,6 +38,8 @@
           });
 
       $('.loans, .cards, .partners').owlCarousel({
+          autoplay:true,
+          autoplayTimeout:800,
           loop:true,
           margin:10,
           nav:true,
