--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -1,16 +1,44 @@
-<h2>Resend confirmation instructions</h2>
-
-<%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+<section id="secondary-banner" class="dynamic-image-5">
+  <div class="container">
+    <div class="row align-items-end">
+      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+        <h2>Resend confirmation instructions</h2>
+        <h4></h4>
+      </div>
+      <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+        <ul class="breadcrumb">
+          <li><a href="#">Home</a></li>
+          <li>Forgot your password?</li>
+        </ul>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</section>
+<section class="personal-loan-section custom-container">
+  <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+    <div class="container">
+      <div class="row regist-div">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= f.label :email %>
+                <%= f.email_field :email, autofocus: true, class: "form-control", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="actions">
+                <%= f.submit "Resend confirmation instructions" %>
+              </div>        
+            </div>
+            <div class="col-md-6 text-right">
+              <%= render "devise/shared/links" %>
+            </div>
+          </div>          
+        </div>
+      </div>
+    </div>
+  <% end %>
+</section>
