--- a/app/views/users/passwords/new.html.erb
+++ b/app/views/users/passwords/new.html.erb
@@ -17,24 +17,28 @@
 <section class="personal-loan-section custom-container">
   <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, autofocus: true, autocomplete: "email" %>            
+      <div class="row regist-div">
+        <div class="col-md-6">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= f.label :email %>
+                <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="actions">
+                <%= f.submit "Send me reset password instructions" %>
+              </div>        
+            </div>
+            <div class="col-md-6 text-right">
+              <%= render "devise/shared/links" %>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="actions">
-            <%= f.submit "Send me reset password instructions" %>
-          </div>        
-        </div>
-        <div class="col-md-6 text-right">
-          <%= render "devise/shared/links" %>
-        </div>
-      </div>
+      </div> 
     </div>
   <% end %>
 </section>
