--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -17,36 +17,40 @@
 <section class="personal-loan-section custom-container">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>  
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group">
-            <%= f.label :email %><br />
-            <%= f.email_field :email, class: "form-control"  %>          
-          </div>
-        </div>
-      </div>
-      <div class="row">
+      <div class="row regist-div">
         <div class="col-md-6">
-          <div class="form-group">
-            <%= f.label :password %><br />
-            <%= f.password_field :password, class: "form-control"  %>         
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= f.label :email %>
+                <%= f.email_field :email, class: "form-control", required: true  %>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, class: "form-control"  %>          
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <%= f.label :password %>
+                <%= f.password_field :password, class: "form-control", required: true  %>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation, class: "form-control", required: true  %>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <div class="actions">
-            <%= f.submit "Sign up" %>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="actions">
+                <%= f.submit "Sign up" %>
+              </div>
+            </div>
+            <div class="col-md-6 text-right">
+              <%= render "devise/shared/links" %>
+            </div>
           </div>
-        </div>
-        <div class="col-md-6 text-right">
-          <%= render "devise/shared/links" %>
         </div>
       </div>
     </div>
