--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,10 +4,8 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12">
         <div class="header-description">
-          <h4>LOANS | CARDS | FIXED DEPOSITS | ONLINE DEMAT AND</h4>
-          <h4>TRADING | MUTUAL FUNDS | INSURANCE | POCKET</h4>
-          <h4> INSURANCE & SUBSCRIPTIONS</h4>
-          <p>All in one place. Think it. Done</p>
+          <h4>LOANS | CARDS | INSURANCE</h4>
+          <p>All in one place.</p>
           <div class="row">
             <div class="col-md-12">
               <form action="/action_page.php" style="display: inline-flex;">
@@ -39,8 +37,8 @@
 
       $('.loans, .cards, .partners').owlCarousel({
           autoplay:true,
-          autoplayTimeout:800,
-          loop:true,
+          // autoplayTimeout:2000,
+          // loop:true,
           margin:10,
           nav:true,
           responsive:{
