--- a/app/views/business_loan/step5.html.erb
+++ b/app/views/business_loan/step5.html.erb
@@ -14,55 +14,36 @@
         </div>
     </div>
 </section>
-<section class="business-loan-section custom-container">
-  <%= form_for @business_loan_offer, :url => { :action => "update_business_offer_assets" }, html: {id:  "business_loan_offer_assets", class: "business_loan_offer_assets"} do |f| %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Upload Documents</h3>
-        </div>
-      </div>
-      <div class="row"> 
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Bank Statement Saving or Current Account <span title="Last 6 months">(?)</span><span>*</span></span>
-            <%= f.file_field(:bank_statement, class: "") %>
-             <p class="error"><%= show_errors(@business_loan_offer, :bank_statement) %></p>
-          </div>
-          <div class="form-group">
-            <span>Id Proof <span title="Pan Card, driving licence, aadhar or voting card">(?)</span><span>*</span></span>
-            <%= f.file_field(:id_proof, class: "") %>
-             <p class="error"><%= show_errors(@business_loan_offer, :id_proof) %></p>
-          </div>
-          <div class="form-group">
-            <span>Residential Address Proof <span title="Aadhar card, Voter card, Property tax receipt, Utility Bill, Passport, Rent Agreement, Gas passbook and receipt, Bank Statement">(?)</span><span>*</span></span>
-            <%= f.file_field(:residential_address_proof, class: "") %>
-             <p class="error"><%= show_errors(@business_loan_offer, :residential_address_proof) %></p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Business Address Proof <span title="Shockup licence, Utility Bill, Rent Agreement">(?)</span><span>*</span></span>
-            <%= f.file_field(:office_address_proof, class: "") %>
-             <p class="error"><%= show_errors(@business_loan_offer, :office_address_proof) %></p>
-          </div>
-          <div class="form-group">
-            <span>ITR Copy <span></span></span>
-            <%= f.file_field(:itr_copy, class: "") %>
-             <p class="error"><%= show_errors(@business_loan_offer, :itr_copy) %></p>
-          </div>
-          <div class="form-group">
-            <span>Passport Photo <span>*</span></span>
-            <%= f.file_field(:passport_photo, class: "") %>
-             <p class="error"><%= show_errors(@business_loan_offer, :passport_photo) %></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <button type="submit" class="btn btn-default">Submit</button>
-        </div>
-      </div>
+<div class="container custom-container">
+  <div class="container">
+    <div class="row">
+      <table class="table loan-table">
+        <thead class="thead-light">
+          <tr>
+            <th>Bank</th>
+            <th>Interest Rate</th>
+            <th>Processing Fee</th>
+            <th>EMI</th>
+            <th>Proceed</th>
+          </tr>
+        </thead>
+        <% @banks.each do |bank| %>
+          <tr>
+            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
+            <td><b><%= percentage_roi(bank.business_loan_bank_info.roi) %><br><span>(Floating)</span></b></td>
+            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.business_loan_bank_info.processing_fee, @business_loan.loan_amount), unit: "₹ ") %></b></td>
+            <td><b><%= number_to_currency(calculate_emi(bank.business_loan_bank_info, @business_loan), unit: "₹ ") %></b></td>
+            <td>
+              <b>
+                <%= form_for @business_loan, :url => { :action => "select_bank" }, html: {id:  "business_loan_bank", class: "business_loan_bank"} do |f| %>
+                  <input type="hidden" name="business_loan_bank[id]" value="<%= bank.business_loan_bank_info.id %>">
+                  <button type="submit" class="btn btn-default">Apply</button>
+                <%end%>
+              </b>
+            </td>
+          </tr>
+        <%end%>
+      </table>
     </div>
-  <%end%>
-</section>
+  </div>
+</div>
