--- a/app/views/home_loan/step5.html.erb
+++ b/app/views/home_loan/step5.html.erb
@@ -1,58 +1,49 @@
 <section id="secondary-banner" class="dynamic-image-6">
-    <div class="container">
-        <div class="row align-items-end">
-            <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Home Loan</h2>
-                <h4>Apply for new Home loan</h4>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-                <ul class="breadcrumb">
-                    <li><a href="#">Home</a></li>
-                    <li>FAQ</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-<section class="business-loan-section custom-container">
-  <%= form_for @home_loan, :url => { :action => "update_home_assets" }, html: { id:  "home_loan_assets", class: "home_loan_assets" } do |f| %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Upload Documents</h3>
-        </div>
+  <div class="container">
+    <div class="row align-items-end">
+      <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+        <h2>New Home Loan</h2>
+        <h4>Apply for new Home loan</h4>
       </div>
-      <div class="row"> 
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Persoanl Bank Statement <span>*</span></span>
-            <%= f.file_field(:persoanl_bank_statement, class: "") %>
-          </div>
-          <div class="form-group">
-            <span>Id Proof <span>*</span></span>
-            <%= f.file_field(:id_proof, class: "") %>
-          </div>
-          <div class="form-group">
-            <span>Salary Slip <span>*</span></span>
-            <%= f.file_field(:salary_slip, class: "") %>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Business Bank_statement <span>*</span></span>
-            <%= f.file_field(:business_bank_statement, class: "") %>
-          </div>
-          <div class="form-group">
-            <span>ITR Copy <span>*</span></span>
-            <%= f.file_field(:itr_copy, class: "") %>
-          </div>
-          <div class="form-group">
-            <span>Passport Photo <span>*</span></span>
-            <%= f.file_field(:passport_photo, class: "") %>
-          </div>
-        </div>
+      <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+        <ul class="breadcrumb">
+          <li><a href="#">Home</a></li>
+          <li>FAQ</li>
+        </ul>
       </div>
-      <button type="submit" class="btn btn-default">Submit</button>
     </div>
-  <%end%>  
+  </div>
 </section>
+<div class="container custom-container">
+  <div class="container">
+    <div class="row">
+      <table class="table loan-table">
+        <thead class="thead-light">
+          <tr>
+            <th>Bank</th>
+            <th>Interest Rate</th>
+            <th>Processing Fee</th>
+            <th>EMI</th>
+            <th>Proceed</th>
+          </tr>
+        </thead>
+        <% @banks.each do |bank| %>
+          <tr>
+            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
+            <td><b><%= percentage_roi(bank.home_loan_bank_info.roi) %><br><span>(Floating)</span></b></td>
+            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.home_loan_bank_info.processing_fee, @home_loan.loan_amount), unit: "₹ ") %></b></td>
+            <td><b><%= number_to_currency(calculate_emi(bank.home_loan_bank_info, @home_loan), unit: "₹ ") %></b></td>
+            <td>
+              <b>
+                <%= form_for @home_loan, :url => { :action => "select_bank" }, html: {id:  "home_loan_bank", class: "home_loan_bank"} do |f| %>
+                  <input type="hidden" name="home_loan_bank[id]" value="<%= bank.home_loan_bank_info.id %>">
+                  <button type="submit" class="btn btn-default">Apply</button>
+                <%end%>
+              </b>
+            </td>
+          </tr>
+        <%end%>
+      </table>
+    </div>
+  </div>
+</div>
