--- a/app/views/loan_against_property/step6.html.erb
+++ b/app/views/loan_against_property/step6.html.erb
@@ -14,58 +14,40 @@
         </div>
     </div>
 </section>
-<div class="container custom-container">
-  <div class="row main-thx-row"> 
-    <div class="col-md-4 col-lg-4 col-sm-12 bank-thank-row">
-      <div class="bank-thx-img">
-        <%= image_tag "icici-bank.png", class: "ptnr-icici-bank" %>
-      </div>
-      <div>
-        <p>Loan Amount</p>
-        <p><%= number_to_currency(@loan_against_property.loan_amount, unit: "₹ ") %></p>
-      </div>
-      <div>
-        <p>EMI</p>
-        <p>₹ 6,555</p>
-      </div>
-      <div>
-        <p>Interest Rate</p>
-        <p>₹ 12.25%</p>
-      </div>
-    </div>
-    <div class="col-md-8 col-lg-8 col-sm-12 thank-row">
-      <div class="congo">
-        <h3 class="float-left">CONGRATULATIONS</h3>
-        <h4 class="float-right">Reference Number: <%= @loan_against_property.reference_number %></h4>        
-      </div>
-      <div>
-        <p>
-          Your application has been <b>Successfully Submitted.</b> Our loan expert will get back to you with in <b>24 hours</b> to take this application forward.
-        </p>
-        <p>
-          <a href="/" target="_blank">Growwcapital.in</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
-          <a href = "mailto:growwcapital@gmail.com">growwcapital@gmail.com</a>.
-        </p>
-        <p>
-          Thank you for choosing Growwcapital!!!
-        </p>        
-      </div>
-      <div class="contact-info">
-        <div>
-          <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
-          <p>
-            Tollfree<br>
-            12-8787-7887
-          </p>
+<section class="business-loan-section">
+  <%= form_for @loan_against_property, :url => { :action => "update_against_property_assets"}, html: {id:  "loan_against_property_assets", class: "loan_against_property_assets"} do |f| %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Persoanl Bank Statement <span>*</span></span>
+            <%= f.file_field(:persoanl_bank_statement, class: "") %>
+          </div>
+          <div class="form-group">
+            <span>Id Proof <span>*</span></span>
+            <%= f.file_field(:id_proof, class: "") %>
+          </div>
+          <div class="form-group">
+            <span>Salary Slip <span>*</span></span>
+            <%= f.file_field(:salary_slip, class: "") %>
+          </div>
         </div>
-        <div class="div2">
-          <span class="fa fa-envelope-o" aria-hidden="true"></span>
-          <p>
-            Write us to<br>
-            growwcapital@gmail.com
-          </p>
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>ITR Copy <span>*</span></span>
+            <%= f.file_field(:itr_copy, class: "") %>
+          </div>
+          <div class="form-group">
+            <span>Property Photo <span>*</span></span>
+            <%= f.file_field(:property_photo, class: "") %>
+          </div>
+          <div class="form-group">
+            <span>Passport Photo <span>*</span></span>
+            <%= f.file_field(:passport_photo, class: "") %>
+          </div>
         </div>
       </div>
+      <button type="submit" class="btn btn-default">Submit</button>
     </div>
-  </div>
-</div>
+  <%end%>
+</section>
