--- a/app/views/new_car_loan/step6.html.erb
+++ b/app/views/new_car_loan/step6.html.erb
@@ -14,58 +14,45 @@
         </div>
     </div>
 </section>
-<div class="container custom-container">
-  <div class="row main-thx-row"> 
-    <div class="col-md-4 col-lg-4 col-sm-12 bank-thank-row">
-      <div class="bank-thx-img">
-        <%= image_tag "icici-bank.png", class: "ptnr-icici-bank" %>
-      </div>
-      <div>
-        <p>Loan Amount</p>
-        <p><%= number_to_currency(@new_car_loan.loan_amount, unit: "₹ ") %></p>
-      </div>
-      <div>
-        <p>EMI</p>
-        <p>₹ 6,555</p>
-      </div>
-      <div>
-        <p>Interest Rate</p>
-        <p>₹ 12.25%</p>
-      </div>
-    </div>
-    <div class="col-md-8 col-lg-8 col-sm-12 thank-row">
-      <div class="congo">
-        <h3 class="float-left">CONGRATULATIONS</h3>
-        <h4 class="float-right">Reference Number: <%= @new_car_loan.reference_number %></h4>        
-      </div>
-      <div>
-        <p>
-          Your application has been <b>Successfully Submitted.</b> Our loan expert will get back to you with in <b>24 hours</b> to take this application forward.
-        </p>
-        <p>
-          <a href="/" target="_blank">Growwcapital.in</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
-          <a href = "mailto:growwcapital@gmail.com">growwcapital@gmail.com</a>.
-        </p>
-        <p>
-          Thank you for choosing Growwcapital!!!
-        </p>        
-      </div>
-      <div class="contact-info">
-        <div>
-          <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
-          <p>
-            Tollfree<br>
-            12-8787-7887
-          </p>
+
+<%= form_for @new_car_loan, :url => { :action => "update_new_car_assets" }, html: {id:  "new_car_loan_assets", class: "new_car_loan_assets"} do |f| %>
+  <div class="container">
+    <div class="row"> 
+      <div class="col-md-6">
+        <div class="form-group">
+          <span>Personal Bank Statement <span>*</span></span>
+          <%= f.file_field(:persoanl_bank_statement, class: "") %>
+           <p class="error"><%= show_errors(@new_car_loan, :persoanl_bank_statement) %></p>
         </div>
-        <div class="div2">
-          <span class="fa fa-envelope-o" aria-hidden="true"></span>
-          <p>
-            Write us to<br>
-            growwcapital@gmail.com
-          </p>
+        <div class="form-group">
+          <span>Business Bank Statement <span>*</span></span>
+          <%= f.file_field(:business_bank_statement, class: "") %>
+           <p class="error"><%= show_errors(@new_car_loan, :business_bank_statement) %></p>
+        </div>
+        <div class="form-group">
+          <span>Id Proof <span>*</span></span>
+          <%= f.file_field(:id_proof, class: "") %>
+           <p class="error"><%= show_errors(@new_car_loan, :id_proof) %></p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="form-group">
+          <span>Salary Slip <span>*</span></span>
+          <%= f.file_field(:salary_slip, class: "") %>
+           <p class="error"><%= show_errors(@new_car_loan, :salary_slip) %></p>
+        </div>
+        <div class="form-group">
+          <span>ITR Copy <span>*</span></span>
+          <%= f.file_field(:itr_copy, class: "") %>
+           <p class="error"><%= show_errors(@new_car_loan, :itr_copy) %></p>
+        </div>
+        <div class="form-group">
+          <span>Passport Photo <span>*</span></span>
+          <%= f.file_field(:passport_photo, class: "") %>
+           <p class="error"><%= show_errors(@new_car_loan, :passport_photo) %></p>
         </div>
       </div>
     </div>
+    <button type="submit" class="btn btn-default">Submit</button>
   </div>
-</div>
+<%end%>
