--- a/app/views/personal_loan/step5.html.erb
+++ b/app/views/personal_loan/step5.html.erb
@@ -14,50 +14,36 @@
         </div>
     </div>
 </section>
-<section class="business-loan-section custom-container">
-  <%= form_for @personal_loan, :url => { :action => "update_personal_loan_assets" }, html: {id:  "personal_loan_assets", class: "personal_loan"} do |f| %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h3>Upload Documents</h3>
-        </div>
-      </div>
-      <div class="row"> 
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Id Proof (<span title="Pan Card, driving licence, aadhar or voting card">?</span>) <span>*</span></span>
-            <%= f.file_field(:id_proof, class: "") %>
-             <p class="error"><%= show_errors(@personal_loan, :id_proof) %></p>
-          </div>
-          <div class="form-group">
-            <span>Address Proof (<span title="Aadhar card, Voter card, Pension Payment Order(PPO), Property tax receipt, Utility Bill, Passport, Rent Agreement, Gas passbook and receipt, Bank Statement">?</span>) <span>*</span></span>
-            <%= f.file_field(:address_proof, class: "") %>
-             <p class="error"><%= show_errors(@personal_loan, :address_proof) %></p>
-          </div>
-          <div class="form-group">
-            <span>Bank Statement (<span title="Last 6 months">?</span>) <span>*</span></span>
-            <%= f.file_field(:bank_statement, class: "") %>
-             <p class="error"><%= show_errors(@personal_loan, :salary_slip) %></p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Salary Slip (<span title="Latest 3 months salary slip">?</span>) <span>*</span></span>
-            <%= f.file_field(:salary_slip, class: "") %>
-             <p class="error"><%= show_errors(@personal_loan, :salary_slip) %></p>
-          </div>
-          <div class="form-group">
-            <span>Passport Photo <span>*</span></span>
-            <%= f.file_field(:passport_photo, class: "") %>
-             <p class="error"><%= show_errors(@personal_loan, :passport_photo) %></p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6">
-          <button type="submit" class="btn btn-default">Submit</button>
-        </div>
-      </div>
+<div class="container custom-container">
+  <div class="container">
+    <div class="row">
+      <table class="table loan-table">
+        <thead class="thead-light">
+          <tr>
+            <th>Bank</th>
+            <th>Interest Rate</th>
+            <th>Processing Fee</th>
+            <th>EMI</th>
+            <th>Proceed</th>
+          </tr>
+        </thead>
+        <% @banks.each do |bank| %>
+          <tr>
+            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
+            <td><b><%= percentage_roi(bank.personal_loan_info.roi) %><br><span>(Floating)</span></b></td>
+            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.personal_loan_info.processing_fee, @personal_loan.loan_amount), unit: "₹ ") %></b></td>
+            <td><b><%= number_to_currency(calculate_emi(bank.personal_loan_info, @personal_loan), unit: "₹ ") %></b></td>
+            <td>
+              <b>
+                <%= form_for @personal_loan, :url => { :action => "select_bank" }, html: {id:  "personal_loan_bank", class: "personal_loan_bank"} do |f| %>
+                  <input type="hidden" name="personal_loan_bank[id]" value="<%= bank.personal_loan_info.id %>">
+                  <button type="submit" class="btn btn-default">Apply</button>
+                <%end%>
+              </b>
+            </td>
+          </tr>
+        <%end%>
+      </table>
     </div>
-  <%end%>
-</section>
+  </div>
+</div>
