--- a/app/views/professional_loan/step5.html.erb
+++ b/app/views/professional_loan/step5.html.erb
@@ -14,61 +14,36 @@
         </div>
     </div>
 </section>
-
-
-  <%= form_for @professional_loan, :url => { :action => "update_professional_assets" }, html: {id:  "professional_loan_assets", class: "professional_loan_assets"} do |f| %>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4">
-          <h3>Upload Documents</h3>
-        </div>
-      </div>
-      <div class="row"> 
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Bank Statement <span>*</span></span>
-            <%= f.file_field(:bank_statement, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :bank_statement) %></p>
-          </div>
-          <div class="form-group">
-            <span>Id Proof <span>*</span></span>
-            <%= f.file_field(:id_proof, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :id_proof) %></p>
-          </div>
-          <div class="form-group">
-            <span>Residential Address Proof <span>*</span></span>
-            <%= f.file_field(:residential_address_proof, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :residential_address_proof) %></p>
-          </div>
-          <div class="form-group">
-            <span>Office Address Proof <span>*</span></span>
-            <%= f.file_field(:office_address_proof, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :office_address_proof) %></p>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <span>Degree <span>*</span></span>
-            <%= f.file_field(:degree, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :degree) %></p>
-          </div>
-          <div class="form-group">
-            <span>Registration Certificate <span>*</span></span>
-            <%= f.file_field(:registration_certificate, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :registration_certificate) %></p>
-          </div>                    
-          <div class="form-group">
-            <span>ITR Copy <span>*</span></span>
-            <%= f.file_field(:itr_copy, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :itr_copy) %></p>
-          </div>
-          <div class="form-group">
-            <span>Passport Photo <span>*</span></span>
-            <%= f.file_field(:passport_photo, class: "") %>
-             <p class="error"><%= show_errors(@professional_loan, :passport_photo) %></p>
-          </div>
-        </div>
-      </div>
-      <button type="submit" class="btn btn-default">Submit</button>
+<div class="container custom-container">
+  <div class="container">
+    <div class="row">
+      <table class="table loan-table">
+        <thead class="thead-light">
+          <tr>
+            <th>Bank</th>
+            <th>Interest Rate</th>
+            <th>Processing Fee</th>
+            <th>EMI</th>
+            <th>Proceed</th>
+          </tr>
+        </thead>
+        <% @banks.each do |bank| %>
+          <tr>
+            <td><div class="img-effect" style="margin-bottom: 0;"><%= image_tag url_for(bank.bank_image), width: 200, height: 100 %></div></td>
+            <td><b><%= percentage_roi(bank.professional_loan_bank_info.roi) %><br><span>(Floating)</span></b></td>
+            <td><b><%= number_to_currency("%.2f" % processing_fee(bank.professional_loan_bank_info.processing_fee, @professional_loan.loan_amount), unit: "₹ ") %></b></td>
+            <td><b><%= number_to_currency(calculate_emi(bank.professional_loan_bank_info, @professional_loan), unit: "₹ ") %></b></td>
+            <td>
+              <b>
+                <%= form_for @professional_loan, :url => { :action => "select_bank" }, html: {id:  "professional_loan_bank", class: "professional_loan_bank"} do |f| %>
+                  <input type="hidden" name="professional_loan_bank[id]" value="<%= bank.professional_loan_bank_info.id %>">
+                  <button type="submit" class="btn btn-default">Apply</button>
+                <%end%>
+              </b>
+            </td>
+          </tr>
+        <%end%>
+      </table>
     </div>
-  <%end%>
+  </div>
+</div>
