--- a/app/views/professional_loan/step6.html.erb
+++ b/app/views/professional_loan/step6.html.erb
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Personal Loan</h2>
-                <h4>Apply for new personal loan</h4>
+                <h2>New Business Loan</h2>
+                <h4>Apply for new business loan</h4>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <ul class="breadcrumb">
@@ -14,58 +14,61 @@
         </div>
     </div>
 </section>
-<div class="container custom-container">
-  <div class="row main-thx-row"> 
-    <div class="col-md-4 col-lg-4 col-sm-12 bank-thank-row">
-      <div class="bank-thx-img">
-        <%= image_tag "icici-bank.png", class: "ptnr-icici-bank" %>
-      </div>
-      <div>
-        <p>Loan Amount</p>
-        <p><%= number_to_currency(@professional_loan.loan_amount, unit: "₹ ") %></p>
-      </div>
-      <div>
-        <p>EMI</p>
-        <p>₹ 6,555</p>
-      </div>
-      <div>
-        <p>Interest Rate</p>
-        <p>₹ 12.25%</p>
-      </div>
-    </div>
-    <div class="col-md-8 col-lg-8 col-sm-12 thank-row">
-      <div class="congo">
-        <h3 class="float-left">CONGRATULATIONS</h3>
-        <h4 class="float-right">Reference Number: <%= @professional_loan.reference_number %></h4>        
-      </div>
-      <div>
-        <p>
-          Your application has been <b>Successfully Submitted.</b> Our loan expert will get back to you with in <b>24 hours</b> to take this application forward.
-        </p>
-        <p>
-          <a href="/" target="_blank">Growwcapital.in</a> doesn't charge any money from customers for it's loan or credit card offerings. In such case you receive such communication from anyone claiming to be a Growwcapital representative, please contact us to 
-          <a href = "mailto:growwcapital@gmail.com">growwcapital@gmail.com</a>.
-        </p>
-        <p>
-          Thank you for choosing Growwcapital!!!
-        </p>        
-      </div>
-      <div class="contact-info">
-        <div>
-          <span class="fa fa-volume-control-phone" aria-hidden="true"></span>
-          <p>
-            Tollfree<br>
-            12-8787-7887
-          </p>
-        </div>
-        <div class="div2">
-          <span class="fa fa-envelope-o" aria-hidden="true"></span>
-          <p>
-            Write us to<br>
-            growwcapital@gmail.com
-          </p>
+
+
+  <%= form_for @professional_loan, :url => { :action => "update_professional_assets" }, html: {id:  "professional_loan_assets", class: "professional_loan_assets"} do |f| %>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h3>Upload Documents</h3>
         </div>
       </div>
+      <div class="row"> 
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Bank Statement <span>*</span></span>
+            <%= f.file_field(:bank_statement, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :bank_statement) %></p>
+          </div>
+          <div class="form-group">
+            <span>Id Proof <span>*</span></span>
+            <%= f.file_field(:id_proof, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :id_proof) %></p>
+          </div>
+          <div class="form-group">
+            <span>Residential Address Proof <span>*</span></span>
+            <%= f.file_field(:residential_address_proof, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :residential_address_proof) %></p>
+          </div>
+          <div class="form-group">
+            <span>Office Address Proof <span>*</span></span>
+            <%= f.file_field(:office_address_proof, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :office_address_proof) %></p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Degree <span>*</span></span>
+            <%= f.file_field(:degree, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :degree) %></p>
+          </div>
+          <div class="form-group">
+            <span>Registration Certificate <span>*</span></span>
+            <%= f.file_field(:registration_certificate, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :registration_certificate) %></p>
+          </div>                    
+          <div class="form-group">
+            <span>ITR Copy <span>*</span></span>
+            <%= f.file_field(:itr_copy, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :itr_copy) %></p>
+          </div>
+          <div class="form-group">
+            <span>Passport Photo <span>*</span></span>
+            <%= f.file_field(:passport_photo, class: "") %>
+             <p class="error"><%= show_errors(@professional_loan, :passport_photo) %></p>
+          </div>
+        </div>
+      </div>
+      <button type="submit" class="btn btn-default">Submit</button>
     </div>
-  </div>
-</div>
+  <%end%>
