--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,8 +17,9 @@
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12">
-        <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94">
-        </iframe>        
+        <!-- <iframe class="header-video"  src="https://www.youtube.com/embed/WJTd1iSch94">
+        </iframe> -->
+        <%= image_tag "diwali.jpg" %>
       </div>
     </div>
     <script>
@@ -36,7 +37,7 @@
           });
 
       $('.loans, .cards, .partners').owlCarousel({
-          autoplay:true,
+          autoplay:false,
           // autoplayTimeout:2000,
           // loop:true,
           margin:10,
@@ -73,7 +74,7 @@
               <div class="card scroll_effect bounceInLeft">
                 <div class="div-loan">
                   <%= link_to personal_loan_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-user"></i>
+                    <i class="fa fa-6x fa-user"></i><br>
                     <span>Personal Loan</span>
                   <% end %>
                   <div class="loan-img1"></div>
@@ -86,7 +87,7 @@
               <div class="card scroll_effect bounceInLeft">
                 <div class="div-loan">
                   <%= link_to business_loan_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-briefcase"></i>
+                    <i class="fa fa-6x fa-briefcase"></i><br>
                     <span>Business Loan</span>
                   <% end %>
                   <div class="loan-img2"></div>
@@ -99,7 +100,7 @@
               <div class="card scroll_effect bounceInRight">
                 <div class="div-loan">
                   <%= link_to professional_loan_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-user-md"></i>
+                    <i class="fa fa-6x fa-user-md"></i><br>
                     <span>Professional Loan</span>
                   <% end %>
                   <div class="loan-img5"></div>
@@ -112,7 +113,7 @@
               <div class="card">
                 <div class="div-loan">
                   <%= link_to home_loan_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-home"></i>
+                    <i class="fa fa-6x fa-home"></i><br>
                     <span>Home Loan</span>
                   <% end %>
                   <div class="loan-img3"></div>
@@ -125,7 +126,7 @@
               <div class="card scroll_effect bounceInRight">
                 <div class="div-loan">
                   <%= link_to loan_against_property_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-building-o"></i>
+                    <i class="fa fa-6x fa-building-o"></i><br>
                     <span>Loan Against Property</span>
                   <% end %>
                   <div class="loan-img4"></div>
@@ -138,7 +139,7 @@
               <div class="card scroll_effect bounceInRight">
                 <div class="div-loan">
                   <%= link_to new_car_loan_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-car"></i>
+                    <i class="fa fa-6x fa-car"></i><br>
                     <span>New Car Loan</span>
                   <% end %>
                   <div class="loan-img5"></div>
@@ -151,7 +152,7 @@
               <div class="card scroll_effect bounceInRight">
                 <div class="div-loan">
                   <%= link_to used_car_loan_path('step1'), method: :get, class: "img-text" do %>
-                    <i class="fa fa-6x fa-car"></i>
+                    <i class="fa fa-6x fa-car"></i><br>
                     <span>Used Car Loan</span>
                   <% end %>
                   <div class="loan-img5"></div>
