--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <section class="toolbar">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 left_bar">
+            <div class="col-lg-6">
               <ul class="left-none">
                 <%= render "layouts/flash_messages" %>
                 <%if current_user.nil?%>
@@ -46,7 +46,7 @@
                 <% end %>
               </ul>
             </div>
-            <div class="col-lg-6 ">
+            <div class="col-lg-6 right_bar">
               <ul class="right-none pull-right company_info">
                 <li><a href="tel:18005670123"><i class="fa fa-phone"></i> 1-800-567-0123</a></li>
                 <li class="address"><a href="contact.html"><i class="fa fa-map-marker"></i> 107 Sunset Blvd., Beverly Hills, CA  90210</a></li>
@@ -66,7 +66,7 @@
                 </button>
                   <%= link_to root_path, method: :get, class: "navbar-brand" do %>
                     <span class="logo">
-                      <span class="primary_text"><%= image_tag "logo2.png", alt: "logo2" %></span>
+                      <span class="primary_text"><%= image_tag "logo2.png", alt: "logo2", class: "main-logo" %></span>
                     </span>                  
                   <% end %>
               </div>
@@ -91,65 +91,21 @@
               </div>
               <div class="mobile-menu-dropdown collapse navbar-collapse" id="navbar-collapse-mobile">
                 <ul class="nav navbar-nav pull-right">
-                  <li class="active"><a href="index-2.html">Home</a></li>
-                  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="404.html">404</a></li>
-                      <li><a href="about.html">About Us</a></li>
-                      <li><a href="faq.html">FAQ</a></li>
-                      <li><a href="page-fullwidth.html">Fullwidth Page</a></li>
-                      <li><a href="page-sidebar.html">Sidebar Page</a></li>
-                      <li><a href="pricing-tables.html">Pricing Tables</a></li>
-                    </ul>
+                  <li class="<%= active_tab('index') %>">
+                    <%= link_to "Home", root_path, method: :get %>
                   </li>
-                  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Inventory <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="demo.html">Select View Demo</a></li>
-                      <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Boxed Layout <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="inventory-boxed-fullwidth.html">Boxed Fullwidth</a></li>
-                          <li><a href="inventory-boxed-sidebar-left.html">Boxed Sidebar Left</a></li>
-                          <li><a href="inventory-boxed-sidebar-right.html">Boxed Sidebar Right</a></li>
-                        </ul>
-                      </li>
-                      <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Wide Layout <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="inventory-wide-fullwidth.html">Wide Fullwidth</a></li>
-                          <li><a href="inventory-wide-sidebar-left.html">Wide Sidebar Left</a></li>
-                          <li><a href="inventory-wide-sidebar-right.html">Wide Sidebar Right</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="inventory-listing.html">Individual Listing</a></li>
-                      <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Vehicle Comparison <b class="caret"></b></a>
-                        <ul class="dropdown-menu">
-                          <li><a href="inventory-2-listing-comparison.html">2 Listing Comparison</a></li>
-                          <li><a href="inventory-3-listing-comparison.html">3 Listing Comparison</a></li>
-                          <li><a href="inventory-4-listing-comparison.html">4 Listing Comparison</a></li>
-                        </ul>
-                      </li>
-                    </ul>
+                  <li class="<%= active_tab('about_us') %>">
+                    <%= link_to "About Us", about_us_path, method: :get %>
                   </li>
-                  <li><a href="service.html">Services</a></li>
-                  <li><a href="our-team.html">Our Team</a></li>
-                  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="portfolio-2-column.html">2 Column Portfolio</a></li>
-                      <li><a href="portfolio-2-column-details.html">2 Column Portfolio Details</a></li>
-                      <li><a href="portfolio-3-column.html">3 Column Portfolio</a></li>
-                      <li><a href="portfolio-3-column-details.html">3 Column Portfolio Details</a></li>
-                      <li><a href="portfolio-4-column.html">4 Column Portfolio</a></li>
-                      <li><a href="portfolio-4-column-details.html">4 Column Portfolio Details</a></li>
-                      <li><a href="portfolio-single-project-split.html">Portfolio Single Project Split</a></li>
-                      <li><a href="portfolio-single-project-wide.html">Portfolio Single Project Wide</a></li>
-                    </ul>
+                  <li class="<%= active_tab('blog') %>">
+                    <%= link_to "Blog", blog_path, method: :get %>
                   </li>
-                  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="blog.html">Blog List</a></li>
-                      <li><a href="blog-post.html">Blog Single Post</a></li>
-                    </ul>
+                  <li class="<%= active_tab('pre_approved') %>">
+                    <%= link_to "Pre Approved Offers", pre_approved_path, method: :get %>
                   </li>
-                  <li><a href="contact.html">Contact</a></li>
+                  <li class="<%= active_tab('contact_us') %>">
+                    <%= link_to "Contact Us", contact_us_path, method: :get %>
+                  </li>
                 </ul>
               </div>
             </div>
